User with devise, basic integration in navbar with simple form & tests

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,9 @@
   </head>
 
   <body>
+    <%= render "shared/navbar" %>
     <%= render "shared/notices" %>
+
     <%= yield %>
   </body>
 </html>
