--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,7 +1,6 @@
 <%= devise_form_container do %>
   <h2><%= t('.title', resource: resource_name.to_s.humanize) %></h2>
 
-
   <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
     <%= f.input :email, autofocus: true, autocomplete: "email" %>
 
@@ -25,6 +24,7 @@
       <%= f.input :password_confirmation, autocomplete: "off" %>
     </div>
 
+    <%= f.input :notifications_enabled %>
 
     <%= f.button :submit, t('.update'), class: "btn-primary" %>
   <% end %>
