--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,31 +1,47 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-between">
-  <%= link_to "Chexpire", root_path, class: "navbar-brand" %>
+  <%= link_to "Chexpire", root_path , class: "navbar-brand" %>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <% if user_signed_in? %>
+        <li class="nav-item">
+          <%= link_to("My checks", checks_path, class: "nav-link") %>
+        </li>
+        <li class="nav-item">
+          <%= link_to("Add a check", new_check_path, class: "nav-link") %>
+        </li>
+      <% end %>
+    </ul>
 
-  <div class="my-2 my-lg-0">
-    <% if user_signed_in? %>
-      <div class="navbar-item">
-        <div class="dropdown">
-          <a class="nav-link dropdown-toggle" href="#"
-            id="navbarDropdown" role="button" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false">
-            <%= current_user.email %>
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <%= link_to edit_user_registration_path, class: "dropdown-item" do %>
-              <i class="fa fa-user"></i> <%= t(".profile", default: "Profile") %>
-            <% end %>
+    <div class="my-2 my-lg-0">
+      <% if user_signed_in? %>
 
-            <%= link_to destroy_user_session_path, method: :delete, class: "dropdown-item" do %>
-              <i class="fa fa-sign-out"></i>  <%= t(".sign_out", default: "Log out") %>
-            <% end %>
+        <div class="navbar-item">
+          <div class="dropdown">
+            <a class="nav-link dropdown-toggle" href="#"
+              id="navbarDropdown" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              <%= current_user.email %>
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <%= link_to edit_user_registration_path, class: "dropdown-item" do %>
+                <i class="fa fa-user"></i> <%= t(".profile", default: "Profile") %>
+              <% end %>
+
+              <%= link_to destroy_user_session_path, method: :delete, class: "dropdown-item" do %>
+                <i class="fa fa-sign-out"></i>  <%= t(".sign_out", default: "Log out") %>
+              <% end %>
+            </div>
           </div>
         </div>
-      </div>
-    <% else %>
-      <!-- Login link (when logged out) -->
-      <%= link_to t(".sign_in"), new_user_session_path, class: "navbar-item navbar-link" %>
-      <%= link_to t(".sign_up"), new_user_registration_path, class: "navbar-item navbar-link" %>
-    <% end %>
+      <% else %>
+        <!-- Login link (when logged out) -->
+        <%= link_to t(".sign_in"), new_user_session_path, class: "navbar-item navbar-link" %>
+        <%= link_to t(".sign_up"), new_user_registration_path, class: "navbar-item navbar-link" %>
+      <% end %>
+    </div>
   </div>
 </nav>
