Checks form: do not ask for created at anymore

--- a/app/views/checks/_table.html.erb
+++ b/app/views/checks/_table.html.erb
@@ -2,7 +2,9 @@
   <div class="mb-4">
     <div>Domain: <%= check.domain %></div>
     <div>Kind: <%= check.kind %></div>
-    <div>Date de création: <%= check.domain_created_at.to_date %></div>
+    <div>Created date: <%= l(check.domain_created_at.to_date) if check.domain_created_at.present? %></div>
+    <div>Update date: <%= l(check.domain_updated_at.to_date) if check.domain_updated_at.present? %></div>
+    <div>Expire date: <%= l(check.domain_expire_at.to_date) if check.domain_expire_at.present? %></div>
 
     <% if check.comment? %>
       <div>Comment: <%= check.comment %></div>
