--- a/app/views/notifications_mailer/_footer_expires_soon.en.text.erb
+++ b/app/views/notifications_mailer/_footer_expires_soon.en.text.erb
@@ -1,6 +1,6 @@
 --
 
-You received this email because of the notification <%= delay %> days before the expiry date.
+You received this email because of the notification <%= interval %> days before the expiry date.
 You can handle the notifications for this check by following this link:
 <%= edit_check_url(check) %>
 
