--- a/app/views/notifications_mailer/_footer_recurrent_failures.en.html.erb
+++ b/app/views/notifications_mailer/_footer_recurrent_failures.en.html.erb
@@ -2,7 +2,7 @@
 <br />
 --
 
-<p>You received this email because of the notification <%= delay %> days before
+<p>You received this email because of the notification <%= interval %> days before
 the last known expiry date.<br />
 You can handle the check by following this link: <br />
 <%= link_to nil, edit_check_url(check) %>
