--- a/app/views/notifications_mailer/_footer_recurrent_failures.en.text.erb
+++ b/app/views/notifications_mailer/_footer_recurrent_failures.en.text.erb
@@ -1,6 +1,6 @@
 --
 
-You received this email because of the notification <%= delay %> days before
+You received this email because of the notification <%= interval %> days before
 the last known expiry date.
 You can handle the check by following this link:
 <%= edit_check_url(check) %>
