--- a/app/views/notifications_mailer/domain_expires_soon.en.html.erb
+++ b/app/views/notifications_mailer/domain_expires_soon.en.html.erb
@@ -9,4 +9,4 @@
 
 <%= render "check_comment_vendor" %>
 
-<%= render "footer_expires_soon", delay: @notification.delay, check: @check %>
+<%= render "footer_expires_soon", interval: @notification.interval, check: @check %>
