--- a/app/views/notifications_mailer/domain_expires_soon.en.text.erb
+++ b/app/views/notifications_mailer/domain_expires_soon.en.text.erb
@@ -6,4 +6,4 @@ the domain <%= @check.domain %> will expire <%= format_utc(@check.domain_expires
 <%= render "check_comment_vendor" %>
 
 
-<%= render "footer_expires_soon", delay: @notification.delay, check: @check %>
+<%= render "footer_expires_soon", interval: @notification.interval, check: @check %>
