--- a/app/views/notifications_mailer/domain_recurrent_failures.en.html.erb
+++ b/app/views/notifications_mailer/domain_recurrent_failures.en.html.erb
@@ -22,4 +22,4 @@ or delete the check by following this link: <br /><br />
 <%= render "check_comment_vendor" %>
 
 
-<%= render "footer_recurrent_failures", delay: @notification.delay, check: @check %>
+<%= render "footer_recurrent_failures", interval: @notification.interval, check: @check %>
