--- a/app/views/notifications/_nested_form.html.erb
+++ b/app/views/notifications/_nested_form.html.erb
@@ -15,7 +15,7 @@
     </div>
 
     <div class="form-group col-md-2">
-      <%= f.input :delay, as: :integer, label: false %>
+      <%= f.input :interval, as: :integer, label: false %>
     </div>
 
     <div class="form-group col-md-1">
