--- a/app/views/notifications_mailer/_footer_expires_soon.en.html.erb
+++ b/app/views/notifications_mailer/_footer_expires_soon.en.html.erb
@@ -3,7 +3,7 @@
 --
 
 <p>
-  You received this email because of the notification <%= delay %> days before the expiry date.<br />
+  You received this email because of the notification <%= interval %> days before the expiry date.<br />
   You can handle the notifications for this check by following this link:<br />
   <%= link_to nil, edit_check_url(check) %>
 </p>
