Locale can be selected at signup or changed in profile form

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -24,6 +24,8 @@
       <%= f.input :password_confirmation, autocomplete: "off" %>
     </div>
 
+    <%= f.input :locale, label: t('.locale'), collection: I18n.available_locales, selected: resource.locale %>
+
     <%= f.input :notifications_enabled %>
 
     <%= f.button :submit, t('.update'), class: "btn-primary" %>
