Fixed missing delay->interval renaming in FR emails.

--- a/app/views/notifications_mailer/_footer_expires_soon.fr.html.erb
+++ b/app/views/notifications_mailer/_footer_expires_soon.fr.html.erb
@@ -3,7 +3,7 @@
 --
 
 <p>
-  Vous avez reçu ce courriel à <%= pluralize(delay, "jour", "jours") %> avant la date d'expiration.</br>
+  Vous avez reçu ce courriel à <%= pluralize(interval, "jour", "jours") %> avant la date d'expiration.</br>
   Vous pouvez gérer les notifications pour cette vérification à ce adresse :
   <%= link_to nil, edit_check_url(check) %>
 </p>
