--- a/app/views/notifications_mailer/_footer_expires_soon.fr.text.erb
+++ b/app/views/notifications_mailer/_footer_expires_soon.fr.text.erb
@@ -1,6 +1,6 @@
 --
 
-Vous avez reçu ce courriel à <%= pluralize(delay, "jour", "jours") %> avant
+Vous avez reçu ce courriel à <%= pluralize(interval, "jour", "jours") %> avant
 la date d'expiration.
 Vous pouvez gérer les notifications pour cette vérification à ce adresse :
 <%= edit_check_url(check) %>
