--- a/app/views/notifications_mailer/domain_recurrent_failures.fr.text.erb
+++ b/app/views/notifications_mailer/domain_recurrent_failures.fr.text.erb
@@ -10,4 +10,4 @@ merci de désactiver la vérification associée, avec ce lien :
 
 <%= render "check_comment_vendor" %>
 
-<%= render "footer_recurrent_failures", delay: @notification.delay, check: @check %>
+<%= render "footer_recurrent_failures", interval: @notification.interval, check: @check %>
