--- a/app/views/notifications_mailer/domain_recurrent_failures.fr.html.erb
+++ b/app/views/notifications_mailer/domain_recurrent_failures.fr.html.erb
@@ -8,9 +8,14 @@
 </p>
 
 <p>
-  La dernière date d'expiration connue est le <%= format_utc(@check.domain_expires_at) %>.
-  <br />
-  Notre dernière vérification réussie a eu lieu le <%= format_utc(@check.last_success_at) %>.
+  <%- if @check.domain_expires_at.present? %>
+    La dernière date d'expiration connue est le <%= format_utc(@check.domain_expires_at) %>.
+    <br />
+  <% end %>
+
+  <%- if @check.last_success_at.present? %>
+    Notre dernière vérification réussie a eu lieu le <%= format_utc(@check.last_success_at) %>.
+  <% end %>
 </p>
 
 <p>
