--- a/app/views/checks/index.html.erb
+++ b/app/views/checks/index.html.erb
@@ -3,10 +3,10 @@
     <div class="col-12 col-lg-10">
       <% if @checks.empty? %>
         <div class="alert alert-info">
-          <%= t(".no_check_yet_html", new_domain_path: new_check_path, new_ssl_path: new_check_path) %>
+          <%= t(".no_check_yet_html", new_domain_path: new_check_path(kind: :domain), new_ssl_path: new_check_path(kind: :ssl)) %>
         </div>
       <% else %>
-        <h1>List of your checks</h1>
+        <h1><%= t(".title") %></h1>
         <%= render "table", checks: @checks %>
       <% end %>
     </div>
