--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,10 +8,13 @@
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
         <li class="nav-item">
-          <%= link_to("My checks", checks_path, class: "nav-link") %>
+          <%= link_to(t(".my_checks"), checks_path, class: "nav-link") %>
         </li>
         <li class="nav-item">
-          <%= link_to("Add a check", new_check_path, class: "nav-link") %>
+          <%= link_to(t(".new_domain_check"), new_check_path(kind: :domain), class: "nav-link") %>
+        </li>
+        <li class="nav-item">
+          <%= link_to(t(".new_ssl_check"), new_check_path(kind: :ssl), class: "nav-link") %>
         </li>
       <% end %>
     </ul>
