--- a/app/views/checks/index.html.erb
+++ b/app/views/checks/index.html.erb
@@ -1,13 +1,24 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-12 col-lg-10">
-      <% if @checks.empty? %>
+      <% if @checks.empty? && current_scopes.blank? %>
         <div class="alert alert-info">
           <%= t(".no_check_yet_html", new_domain_path: new_check_path(kind: :domain), new_ssl_path: new_check_path(kind: :ssl)) %>
         </div>
       <% else %>
         <h1><%= t(".title") %></h1>
-        <%= render "table", checks: @checks %>
+        <%= link_to("Domains", checks_path(current_criterias.merge(kind: :domain))) %>
+        <%= link_to("SSL", checks_path(current_criterias.merge(kind: :ssl))) %>
+        <%= form_tag(checks_path(current_scopes), method: :get) do  %>
+          <%= search_field_tag :by_domain, current_scopes[:by_domain] %>
+          <%= button_tag t(".filter") %>
+        <% end %>
+
+        <% if @checks.any? %>
+          <%= render "table", checks: @checks %>
+        <% else %>
+          <div class="alert alert-warning"><%= t(".no_matching_check") %></div>
+        <% end %>
       <% end %>
     </div>
   </div>
