--- a/app/views/checks/_table.html.erb
+++ b/app/views/checks/_table.html.erb
@@ -1,32 +1,39 @@
-<div class="mb-4">
+<div class="mb-4 table-responsive">
   <table class="table table-checks">
     <thead>
       <tr>
         <th scope="col"></th>
         <th scope="col">
           <%= t(".domain") %>
-          <%== checks_sort_links(:domain) %>
+          <span class="sort-links mx-sm-3 text-nowrap">
+            <%== checks_sort_links(:domain) %>
+          </span>
         </th>
         <th scope="col">
           <%= t(".expiry_date") %>
-          <%== checks_sort_links(:domain_expires_at) %>
+          <span class="sort-links mx-sm-3 text-nowrap">
+            <%== checks_sort_links(:domain_expires_at) %>
+          </span>
         </th>
-        <th scope="col"><%= t(".edit") %></th>
+        <th scope="col" class="text-center"><%= t(".edit") %></th>
       </tr>
     </thead>
     <tbody>
       <% checks.each do |check| %>
         <tr class="check-row <%= check_row_class(check) %>">
           <td>
-            <span class="badge badge-secondary"><%= check_kind_label(check) %></span>
+            <span class="badge badge-info"><%= t(".kind_labels.#{check.kind}") %></span>
           </td>
           <td>
             <strong><%= check.domain %></strong>
           </td>
           <td>
-            <%= format_utc(check.domain_expires_at) if check.domain_expires_at.present? %>
+            <% if check.domain_expires_at.present? %>
+              <%= content_tag :span, format_date(check.domain_expires_at), class: "d-none d-md-inline" %>
+              <%= content_tag :span, format_date(check.domain_expires_at, format: :short), class: "d-inline d-md-none" %>
+            <% end %>
           </td>
-          <td class="action">
+          <td class="action text-center">
             <%= link_to edit_check_path(check) do %>
               <%== Octicons::Octicon.new("pencil").to_svg %>
             <% end %>
