System tests for dashboard

--- a/app/views/checks/_table.html.erb
+++ b/app/views/checks/_table.html.erb
@@ -1,5 +1,5 @@
 <div class="mb-4 table-responsive">
-  <table class="table table-checks">
+  <table class="table checks-table">
     <thead>
       <tr>
         <th scope="col"></th>
