--- a/app/views/checks/_filters.html.erb
+++ b/app/views/checks/_filters.html.erb
@@ -1,4 +1,4 @@
-<div class="row justify-content-md-end">
+<div class="row justify-content-md-end checks-filters">
 
   <div class="col-md-6 mb-3 d-flex justify-content-between justify-content-md-start">
     <div class="btn-group mr-2">
