Home title i18n + intro

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,9 @@
-<h1>Welcome Chexpire !</h1>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-12 col-lg-10">
+      <h1><%= t(".welcome") %></h1>
+
+      <p><%= t(".intro") %></p>
+    </div>
+  </div>
+</div>
