Disable turbolinks towards check edit
As of today, this causes a CSP issue when a notification is removed via 
rails-ujs, because nonce is not updated by turbolinks and rails-ujs use 
previous nonces.

--- a/app/views/checks/_table.html.erb
+++ b/app/views/checks/_table.html.erb
@@ -36,7 +36,7 @@
             <% end %>
           </td>
           <td class="action text-right">
-            <%= link_to edit_check_path(check) do %>
+            <%= link_to edit_check_path(check), "data-turbolinks" => false do %>
               <%== Octicons::Octicon.new("pencil").to_svg %>
             <% end %>
           </td>
