--- a/app/frontend/scss/_variables.scss
+++ b/app/frontend/scss/_variables.scss
@@ -1,13 +1,15 @@
 // Copyright (C) 2018 Colin Darie <colin@darie.eu>, 2018 Evolix <info@evolix.fr>
 // License: GNU AGPL-3+ (see full text in LICENSE file)
 
-$input-placeholder-color: #adb5bd;
+$input-placeholder-color: #013d3a;
 $enable-rounded: false;
 $theme-colors: (
-  "primary": #259EDB,
-  "secondary": #565554,
-  "success": #42935C,
+  "primary": #118b83, //light-green
+  "secondary": #013d3a, //dark-green
+  "tertiary": #be0c04, //red
+  "quaternary": #d6b20e, // yellow
+  "success": #118b83, //light-green
   "warning": #F6AE2D,
-  "danger": #E94F37,
+  "danger": #be0c04, //red
   "info": #2E86AB,
 );
