--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,9 @@
 
   <body>
     <%= render "shared/navbar" %>
+    <% if params[:action] == 'home' %>
+      <%= render 'shared/home_header' %>
+    <%end%>
     <%= render "shared/notices" %>
 
     <%= yield %>
