--- a/app/views/checks/_form.html.erb
+++ b/app/views/checks/_form.html.erb
@@ -12,7 +12,11 @@
 
   <%= f.input :comment %>
   <%= f.input :vendor %>
-
+  
+  <% if check.ssl? %>
+    <%= f.input :round_robin %>
+  <% end %>
+  
   <% if check.persisted? %>
     <%= f.input :active %>
   <% end %>
