Notifications grouped of checks in error to user email.
This is not dependent of Notificatioon model.

--- a/app/views/notifications_mailer/_check_comment_vendor.en.html.erb
+++ b/app/views/notifications_mailer/_check_comment_vendor.en.html.erb
@@ -1,13 +1,13 @@
-<%- if @check.comment.present? -%>
+<%- if check.comment.present? -%>
 <p>
   You wrote the following comment with this domain:
 
   <blockquote>
-    <%= @check.comment -%>
+    <%= check.comment -%>
   </blockquote>
 </p>
 <%- end -%>
 
-<%- if @check.vendor.present? -%>
-Vendor: <%= @check.vendor %>
+<%- if check.vendor.present? -%>
+Vendor: <%= check.vendor %>
 <% end %>
