--- a/app/views/notifications_mailer/_footer_recurrent_failures.en.text.erb
+++ b/app/views/notifications_mailer/_footer_recurrent_failures.en.text.erb
@@ -1,8 +1,6 @@
 --
 
-You received this email because of the notification <%= interval %> days before
-the last known expiry date.
-You can handle the check by following this link:
-<%= edit_check_url(check) %>
+You can handle all your checks by following this link:
+<%= checks_url %>
 
 The Chexpire Team
