--- a/app/views/notifications_mailer/_footer_recurrent_failures.fr.html.erb
+++ b/app/views/notifications_mailer/_footer_recurrent_failures.fr.html.erb
@@ -1,10 +1,8 @@
 <br />
-<br />
 --
 
-<p>Vous avez reçu ce courriel à <%= pluralize(interval, "jour", "jours") %> avant la dernière date d'expiration connue.<br />
-Vous pouvez gérer les notifications pour cette vérification à ce adresse :
-<%= link_to nil, edit_check_url(check) %>
+<p>Vous pouvez gérer l'ensemble de vos vérifications à cette adresse : <br />
+<%= link_to nil, checks_url %>
 </p>
 
 <p>L'équipe Chexpire</p>
