--- a/app/views/notifications_mailer/_footer_recurrent_failures.fr.text.erb
+++ b/app/views/notifications_mailer/_footer_recurrent_failures.fr.text.erb
@@ -1,8 +1,6 @@
 --
 
-Vous avez reçu ce courriel à <%= pluralize(interval, "jour", "jours") %>
-avant la dernière date d'expiration connue.
-Vous pouvez gérer les notifications pour cette vérification à ce adresse :
-<%= edit_check_url(check) %>
+Vous pouvez gérer l'ensemble de vos vérifications à cette adresse :
+<%= checks_url %>
 
 L'équipe Chexpire
