--- a/app/views/notifications_mailer/_check_comment_vendor.fr.text.erb
+++ b/app/views/notifications_mailer/_check_comment_vendor.fr.text.erb
@@ -1,11 +1,8 @@
-<%- if @check.comment.present? -%>
+<%- if check.comment.present? -%>
 Vous avez saisi le commentaire suivant pour ce domaine :
-
-    <%= @check.comment -%>
+    <%= check.comment -%>
 <%- end -%>
 
-
-
-<%- if @check.vendor.present? -%>
-Fournisseur : <%= @check.vendor %>
+<%- if check.vendor.present? -%>
+Fournisseur : <%= check.vendor %>
 <% end %>
