--- a/app/views/notifications_mailer/domain_expires_soon.en.text.erb
+++ b/app/views/notifications_mailer/domain_expires_soon.en.text.erb
@@ -3,7 +3,7 @@ Hi,
 the domain <%= @check.domain %> will expire <%= format_utc(@check.domain_expires_at) %>.
 
 
-<%= render "check_comment_vendor" %>
+<%= render "check_comment_vendor", check: @check %>
 
 
 <%= render "footer_expires_soon", interval: @notification.interval, check: @check %>
