--- a/app/views/notifications_mailer/domain_expires_soon.fr.html.erb
+++ b/app/views/notifications_mailer/domain_expires_soon.fr.html.erb
@@ -7,6 +7,6 @@
 </p>
 <br />
 
-<%= render "check_comment_vendor" %>
+<%= render "check_comment_vendor", check: @check %>
 
 <%= render "footer_expires_soon", interval: @notification.interval, check: @check %>
