--- a/app/views/notifications_mailer/ssl_expires_soon.fr.text.erb
+++ b/app/views/notifications_mailer/ssl_expires_soon.fr.text.erb
@@ -3,7 +3,7 @@ Salut,
 le certificat SSL pour <%= @check.domain %> va expirer le <%= format_utc(@check.domain_expires_at) %>.
 
 
-<%= render "check_comment_vendor" %>
+<%= render "check_comment_vendor", check: @check %>
 
 
 <%= render "footer_expires_soon", interval: @notification.interval, check: @check %>
