--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
   </head>
 
   <body>
+    <%= render 'shared/beta_banner' %>
     <%= render "shared/navbar" %>
     <% if params[:action] == 'home' %>
       <%= render 'shared/home_header' %>
