--- a/app/views/shared/_beta_banner.html.erb
+++ b/app/views/shared/_beta_banner.html.erb
@@ -1,4 +1,4 @@
 <div class="container-fluid beta-banner">
-  <p><%= t(".beta_info")%> <%= t(".issue_link")%> <%= link_to(("https://github.com/Evolix/chexpire/issues/new"), "https://github.com/Evolix/chexpire/issues/new")%>
+  <p><%= t(".beta_info")%> <%= link_to(t(".issue_link"),("https://github.com/Evolix/chexpire/issues/new"))%>
   </p>
 </div>
