We prefer "sign in/out" instead of "log in/out"

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -46,7 +46,7 @@
 
                 <%= link_to destroy_user_session_path, method: :delete, class: "dropdown-item" do %>
                 <i class="fa fa-sign-out"></i>
-                <%= t(".sign_out", default: "Log out") %>
+                <%= t(".sign_out", default: "Sign out") %>
               <% end %>
             </div>
           </div>
