More explicit placeholder color
Temporary workaround for #81

--- a/app/frontend/scss/_variables.scss
+++ b/app/frontend/scss/_variables.scss
@@ -1,7 +1,7 @@
 // Copyright (C) 2018 Colin Darie <colin@darie.eu>, 2018 Evolix <info@evolix.fr>
 // License: GNU AGPL-3+ (see full text in LICENSE file)
 
-$input-placeholder-color: #013d3a;
+$input-placeholder-color: #b9bbbb;
 $enable-rounded: false;
 $theme-colors: (
   "primary": #118b83, //light-green
