--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -24,6 +24,9 @@
             <li class="nav-item">
               <%= link_to(t(".GitHub"), "https://github.com/Evolix/chexpire", class: "nav-link") %>
             </li>
+            <li class="nav-item">
+              <%= link_to(t(".my_notifications"), notifications_path, class: "nav-link") %>
+            </li>
           <% end %>
         </ul>
 
