--- a/app/frontend/scss/index.scss
+++ b/app/frontend/scss/index.scss
@@ -5,5 +5,7 @@
 @import '~bootstrap/scss/bootstrap';
 @import 'layout';
 @import 'icons';
+@import 'components/callouts';
 @import 'components/users';
 @import 'components/checks';
+@import 'components/notifications';
