--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,7 +2,7 @@
   <% # License: GNU AGPL-3+ (see full text in LICENSE file) %>
     <nav class="navbar navbar-expand-lg navbar-dark justify-content-between">
       <div class="container-fluid">
-        <%= link_to root_path , class: "navbar-brand" do %>
+        <%= link_to (user_signed_in? ? checks_path : root_path), class: "navbar-brand" do %>
         <%= image_tag 'chexpire10.png', width: 200, alt: 'chexpire logo' %>
       <% end %>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
