--- a/app/views/checks/new.html.erb
+++ b/app/views/checks/new.html.erb
@@ -5,7 +5,7 @@
     <div class="col-12 col-lg-10">
       <h1><%= t(".#{@check.kind}.title") %></h1>
 
-      <%= render "form", check: @check %>
+      <%= render "form", check: @check, new_notification: @new_notification %>
     </div>
   </div>
 </div>
